@@ -1,4 +1,4 @@
-// $Id.c$
+// $Id$
 // 
 // Test Suite for geos::util::UniqueCoordinateArrayFilter class.
 
